--- a/src/main/webapp/i18n/resources-locale_ru.json
+++ b/src/main/webapp/i18n/resources-locale_ru.json
@@ -294,7 +294,7 @@
 
     {
         "key":"_sign-in_",
-        "value":"Создать аккаунт",
+        "value":"Войти",
         "description":"Sign in button"
     },
     {
