--- a/src/main/webapp/i18n/resources-locale_ru.json
+++ b/src/main/webapp/i18n/resources-locale_ru.json
@@ -922,5 +922,65 @@
         "key":"_uploading-finished-message_",
         "value":"Загрузка завершена",
         "description":"message shown when some upload operation finished successfully (documents, etc.)"
+    },
+
+
+    {
+        "key":"_bad-request_",
+        "value":"Неверны запрос",
+        "description":"bad request http status (400)"
+    },
+    {
+        "key":"_unauthorized_",
+        "value":"Неавторизован",
+        "description":"unauthorized http status (401)"
+    },
+    {
+        "key":"_forbidden_",
+        "value":"Доступ запрещен",
+        "description":"forbidden http status (403)"
+    },
+    {
+        "key":"_not-found_",
+        "value":"Не найден",
+        "description":"not found http status (404)"
+    },
+    {
+        "key":"_internal-server-error_",
+        "value":"Внутренняя ошибка сервера",
+        "description":"internal server error http status (500)"
+    },
+    {
+        "key":"_error-occurred_",
+        "value":"Возникла ошибка",
+        "description":"http error occurred"
+    },
+
+
+    {
+        "key":"_doc-upload-protected-error_",
+        "value":"Загружаемый файл защищен паролем и не может быть проанализирован",
+        "description":"The uploaded file is password protected and could not be analyzed (documents uploading)"
+    },
+    {
+        "key":"_doc-upload-required-error_",
+        "value":"Не все обязательные поля заполнены",
+        "description":"Not all required information provided (documents uploading)"
+    },
+    {
+        "key":"_doc-upload-analyzing-error_",
+        "value":"Возникли проблемы при анализе документа. Свяжитесь с администратором.",
+        "description":"Internal problems while analyzing the document (documents uploading)"
+    },
+    {
+        "key":"_doc-delete-error_",
+        "value":"Ошибка при удалении документа",
+        "description":"Error while deleting the document"
+    },
+    {
+        "key":"_doc-reindex-error_",
+        "value":"Ошибка при переиндексации документа",
+        "description":"Error while re-indexing the document"
     }
+
 ]
