default role; not logged in user role

--- a/src/main/webapp/i18n/resources-locale_ru.json
+++ b/src/main/webapp/i18n/resources-locale_ru.json
@@ -913,6 +913,16 @@
         "value":"Добавить новую роль",
         "description":"button on roles page"
     },
+    {
+        "key":"_default-role_",
+        "value":"Роль по умолчанию",
+        "description":"default role select label"
+    },
+    {
+        "key":"_not-logged-in-role_",
+        "value":"Роль неавторизованного пользователя",
+        "description":"not logged in user role select label"
+    },
     
     
     {
