--- a/src/main/webapp/i18n/resources-locale_en.json
+++ b/src/main/webapp/i18n/resources-locale_en.json
@@ -915,6 +915,16 @@
         "value":"Add new role",
         "description":"button on roles page"
     },
+    {
+        "key":"_default-role_",
+        "value":"Default role",
+        "description":"default role select label"
+    },
+    {
+        "key":"_not-logged-in-role_",
+        "value":"Not logged in user role",
+        "description":"not logged in user role select label"
+    },
     
     
     {
