user registering in progress message

--- a/src/main/webapp/i18n/resources-locale_en.json
+++ b/src/main/webapp/i18n/resources-locale_en.json
@@ -288,6 +288,11 @@
         "value":"Saving ...",
         "description":"saving in progress message"
     },
+    {
+        "key":"_registering_",
+        "value":"Registering ...",
+        "description":"registering in progress message"
+    },
 
 
     {
