--- a/src/main/webapp/i18n/resources-locale_ru.json
+++ b/src/main/webapp/i18n/resources-locale_ru.json
@@ -286,6 +286,11 @@
         "value":"Сохранение ...",
         "description":"saving in progress message"
     },
+    {
+        "key":"_registering_",
+        "value":"Идет регистрация ...",
+        "description":"registering in progress message"
+    },
 
 
     {
