--- a/src/main/webapp/i18n/resources-locale_en.json
+++ b/src/main/webapp/i18n/resources-locale_en.json
@@ -1886,5 +1886,12 @@
         "key":"_doc-reindex-error_",
         "value":"Error while re-indexing the document",
         "description":"Error while re-indexing the document"
+    },
+
+
+    {
+        "key":"_user-already-exists-error_",
+        "value":"User already exists",
+        "description":"Error while registering new user: user already exists"
     }
 ]
